--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.2",
     "serve-favicon": "2.4.2",
+    "sharp": "^0.20.2",
     "standard": "^10.0.2",
     "supertest": "^3.0.0",
-    "sync-request": "^4.0.3"
+    "sync-request": "^4.0.3",
+    "webshot": "^0.18.0"
   },
   "greenkeeper": {
     "ignore": [
