--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-sass": "3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.7",
-    "marked": "^0.3.6",
+    "marked": "^0.3.19",
     "minimist": "1.2.0",
     "notifications-node-client": "^3.0.0",
     "nunjucks": "^2.5.2",
@@ -43,6 +43,7 @@
     "run-sequence": "^1.2.2",
     "serve-favicon": "2.4.2",
     "sharp": "^0.20.2",
+    "simplemde": "^1.11.2",
     "standard": "^10.0.2",
     "supertest": "^3.0.0",
     "sync-request": "^4.0.3",
