--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "browser-sync": "^2.11.1",
     "client-sessions": "^0.8.0",
     "cross-spawn": "^7.0.2",
+    "dateformat": "^4.5.1",
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
     "fancy-log": "^1.3.3",
-    "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "govuk_template_jinja": "^0.24.1",
+    "govuk-elements-sass": "^3.1.3",
+    "govuk-frontend": "^3.11.0",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^4.0.1",
