--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,10 @@
 # dont include the following files in the zip
 .gitattributes export-ignore
-README.md export-ignore
+.github export-ignore
+__tests__ export-ignore
+app.json export-ignore
 CHANGELOG.md export-ignore
 CONTRIBUTING.md export-ignore
 create-release.sh export-ignore
-travis.yml export-ignore
-.travis export-ignore
-app.json export-ignore
+README.md export-ignore
+internal_docs export-ignore
