--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "govuk-prototype-kit",
-  "description": "Rapidly create HTML prototypes of GOV.UK services",
+  "name": "publish-teacher-training-prototype",
+  "description": "Prototype for the ‘Publish teacher training courses’ service",
   "version": "9.12.1",
   "private": true,
   "engines": {
     "node": ">=10.0.0 <15.0.0"
   },
   "scripts": {
+    "prestart": "npm install",
     "start": "node start.js",
     "lint": "standard",
     "test": "npm run lint && gulp generate-assets && jest"
@@ -17,26 +18,26 @@
     "basic-auth": "^2.0.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.14.1",
-    "browser-sync": "^2.11.1",
+    "browser-sync": "^2.26.13",
     "client-sessions": "^0.8.0",
-    "cross-spawn": "^7.0.2",
+    "cross-spawn": "^7.0.3",
     "dateformat": "^4.5.1",
     "del": "^6.0.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.13.0",
+    "express-session": "^1.17.1",
     "express-writer": "0.0.4",
     "fancy-log": "^1.3.3",
     "govuk-frontend": "^3.11.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "inquirer": "^8.0.0",
-    "keypather": "^3.0.0",
-    "marked": "^2.0.1",
+    "keypather": "^3.1.0",
+    "marked": "^3.0.0",
     "notifications-node-client": "^5.1.0",
-    "nunjucks": "^3.2.1",
+    "nunjucks": "^3.2.2",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
