--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "publish-teacher-training-prototype",
   "description": "Prototype for the ‘Publish teacher training courses’ service",
-  "version": "9.12.1",
+  "version": "12.0.0",
   "private": true,
   "engines": {
-    "node": ">=10.0.0 <15.0.0"
+    "node": ">=12.0.0 <17.0.0"
   },
   "scripts": {
     "prestart": "npm install",
@@ -13,13 +13,14 @@
     "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
-    "acorn": "^8.1.0",
+    "acorn": "^8.5.0",
     "ansi-colors": "^4.1.1",
     "basic-auth": "^2.0.0",
     "basic-auth-connect": "^1.0.0",
-    "body-parser": "^1.14.1",
+    "body-parser": "^1.19.0",
     "browser-sync": "^2.26.13",
     "client-sessions": "^0.8.0",
+    "connect-flash": "^0.1.1",
     "cross-spawn": "^7.0.3",
     "dateformat": "^4.5.1",
     "del": "^6.0.0",
@@ -27,33 +28,36 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-writer": "0.0.4",
+    "faker": "^5.5.3",
     "fancy-log": "^1.3.3",
-    "govuk-frontend": "^3.11.0",
+    "govuk-frontend": "^4.0.0",
+    "gray-matter": "^4.0.3",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "inquirer": "^8.0.0",
-    "keypather": "^3.1.0",
-    "marked": "^3.0.0",
+    "inquirer": "^8.2.0",
+    "lodash": "^4.17.21",
+    "luxon": "^2.0.1",
+    "marked": "^4.0.0",
+    "node-sass": "^6.0.1",
     "notifications-node-client": "^5.1.0",
+    "numeral": "^2.0.6",
     "nunjucks": "^3.2.2",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.4.16",
-    "uuid": "^8.3.2"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "nunjucks"
-    ]
+    "uuid": "^8.3.2",
+    "weighted": "^1.0.0"
   },
   "devDependencies": {
     "glob": "^7.1.4",
-    "jest": "^26.6.3",
-    "node-sass": "^5.0.0",
-    "standard": "^16.0.3",
-    "supertest": "^6.1.3"
+    "jest": "^27.3.1",
+    "standard": "^14.3.3",
+    "supertest": "^6.1.6"
+  },
+  "jest": {
+    "testRunner": "jest-jasmine2"
   }
 }
