--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "notifications-node-client": "^5.1.0",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
