Add string package

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-local": "^1.0.0",
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
+    "string": "^3.3.3",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.5.3",
     "uuid": "^8.3.2",
