--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=12.0.0 <17.0.0"
   },
   "scripts": {
-    "prestart": "npm install",
+    "generate-data": "node ./scripts/generate-data.js",
+    "postinstall": "npm run generate-data",
     "start": "node start.js",
     "lint": "standard",
     "test": "npm run lint && gulp generate-assets && jest"
