--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ package-lock.json
 
 # Ignore generated data files
 app/data/age-ranges.json
+app/data/course-length.json
 app/data/course-statuses.json
 app/data/degree-grades.json
 app/data/funding-types.json
