--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ app/data/courses/
 app/data/locations/
 app/data/organisations/
 app/data/temp/
+app/data/users/
 
 # Ignore tracking usage data config - we want a different one for each user
 usage-data-config.json
