--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ app/data/course-statuses.json
 app/data/degree-grades.json
 app/data/funding-types.json
 app/data/program-types.json
+app/data/notification-types.json
 app/data/qualifications.json
 app/data/study-modes.json
 app/data/subject-levels.json
 app/data/subjects.json
-app/data/users.json
 
 # Ignore generated data directories
 app/data/courses/
