--- a/lib/template.env
+++ b/lib/template.env
@@ -18,3 +18,6 @@
 # =========================================
 # INSERT YOUR DATA HERE:
 
+USE_LOGIN=false
+USE_LOGIN_FALLBACK=false
+PHASE_TAG_TEXT=development
