--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ app/data/degree-grades.json
 app/data/funding-types.json
 app/data/program-types.json
 app/data/notification-types.json
+app/data/permission-types.json
 app/data/qualifications.json
 app/data/study-modes.json
 app/data/subject-levels.json
