--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "generate-data": "node ./scripts/generate-data.js",
     "postinstall": "npm run generate-data",
     "start": "node start.js",
-    "lint": "standard",
-    "test": "npm run lint && gulp generate-assets && jest"
+    "lint:scripts": "standard",
+    "lint:scripts:fix": "standard --fix",
+    "test": "npm run lint:scripts && gulp generate-assets && jest"
   },
   "dependencies": {
     "acorn": "^8.5.0",
