--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "lodash": "^4.17.21",
     "luxon": "^2.4.0",
     "marked": "^4.0.15",
-    "node-sass": "^7.0.1",
     "notifications-node-client": "^5.1.1",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.3",
@@ -49,6 +48,7 @@
     "passport-local": "^1.0.0",
     "portscanner": "^2.1.1",
     "require-dir": "^1.2.0",
+    "sass": "^1.52.1",
     "string": "^3.3.3",
     "sync-request": "^6.1.0",
     "universal-analytics": "^0.5.3",
