--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ app/data/age-ranges.json
 app/data/course-lengths.json
 app/data/course-statuses.json
 app/data/degree-grades.json
+app/data/financial-incentives.json
 app/data/funding-types.json
 app/data/program-types.json
 app/data/notification-types.json
