--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "12.0.0",
   "private": true,
   "engines": {
-    "node": ">=12.0.0 <17.0.0"
+    "node": "18.12.1"
   },
   "scripts": {
     "generate-data": "node ./scripts/generate-data.js",
@@ -16,22 +16,22 @@
   },
   "dependencies": {
     "acorn": "^8.5.0",
-    "ansi-colors": "^4.1.1",
-    "basic-auth": "^2.0.0",
+    "ansi-colors": "^4.1.3",
+    "basic-auth": "^2.0.1",
     "basic-auth-connect": "^1.0.0",
-    "body-parser": "^1.19.0",
-    "browser-sync": "^2.26.13",
+    "body-parser": "^1.20.1",
+    "browser-sync": "^2.27.11",
     "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
     "cross-spawn": "^7.0.3",
     "del": "^6.1.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-writer": "0.0.4",
     "faker": "^5.5.3",
     "fancy-log": "^2.0.0",
-    "govuk-frontend": "^4.1.0",
+    "govuk-frontend": "^4.4.1",
     "gray-matter": "^4.0.3",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0",
@@ -39,16 +39,16 @@
     "gulp-sourcemaps": "^3.0.0",
     "inquirer": "^8.2.4",
     "lodash": "^4.17.21",
-    "luxon": "^3.0.1",
-    "marked": "^4.0.15",
+    "luxon": "^3.2.1",
+    "marked": "^4.2.5",
     "notifications-node-client": "^5.1.1",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "portscanner": "^2.1.1",
+    "portscanner": "^2.2.0",
     "require-dir": "^1.2.0",
-    "sass": "^1.52.1",
+    "sass": "^1.57.1",
     "string": "^3.3.3",
     "sync-request": "^6.1.0",
     "universal-analytics": "^0.5.3",
@@ -56,8 +56,8 @@
     "weighted": "^1.0.0"
   },
   "devDependencies": {
-    "glob": "^8.0.1",
-    "jest": "^29.0.1",
+    "glob": "^8.0.3",
+    "jest": "^29.3.1",
     "standard": "^17.0.0",
     "supertest": "^6.1.6"
   },
