--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,12 @@ app/data/program-types.json
 app/data/notification-types.json
 app/data/permission-types.json
 app/data/qualifications.json
+app/data/school-groups.json
+app/data/school-phases.json
+app/data/school-statuses.json
+app/data/school-types.json
 app/data/study-modes.json
+app/data/schools.json
 app/data/subject-levels.json
 app/data/subjects.json
 
